<?xml version="1.0" encoding="UTF-8"?>
<!--

       Copyright 2018-2026 the original author or authors.

       Licensed under the Apache License, Version 2.0 (the "License");
       you may not use this file except in compliance with the License.
       You may obtain a copy of the License at

          https://www.apache.org/licenses/LICENSE-2.0

       Unless required by applicable law or agreed to in writing, software
       distributed under the License is distributed on an "AS IS" BASIS,
       WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
       See the License for the specific language governing permissions and
       limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.mybatis</groupId>
    <artifactId>mybatis-parent</artifactId>
    <version>52</version>
    <relativePath />
  </parent>

  <groupId>org.mybatis.scripting</groupId>
  <artifactId>mybatis-thymeleaf</artifactId>
  <version>1.1.2-SNAPSHOT</version>

  <name>MyBatis Thymeleaf</name>
  <description>Thymeleaf support for MyBatis</description>
  <url>https://github.com/mybatis/thymeleaf-scripting/</url>

  <inceptionYear>2018</inceptionYear>

  <contributors>
    <contributor>
      <name>Kazuki Shimizu</name>
      <email>kazuki43zoo@gmail.com</email>
    </contributor>
  </contributors>

  <scm>
    <connection>scm:git:ssh://git@github.com/mybatis/thymeleaf-scripting.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/mybatis/thymeleaf-scripting.git</developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/mybatis/thymeleaf-scripting/</url>
  </scm>
  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/mybatis/thymeleaf-scripting/issues</url>
  </issueManagement>
  <ciManagement>
    <system>GitHub</system>
    <url>https://github.com/mybatis/thymeleaf-scripting/actions</url>
  </ciManagement>
  <distributionManagement>
    <site>
      <id>gh-pages-scm</id>
      <name>MyBatis Thymeleaf GitHub Pages</name>
      <url>scm:git:ssh://git@github.com/mybatis/thymeleaf-scripting.git</url>
    </site>
  </distributionManagement>

  <properties>
    <!-- Maven compiler options -->
    <java.version>11</java.version>
    <java.release.version>11</java.release.version>

    <!-- Dependencies artifact version -->
    <mybatis.version>3.5.19</mybatis.version>
    <thymeleaf.version>3.1.5.RELEASE</thymeleaf.version>

    <!-- Dependencies plugin version -->
    <asciidoctor-maven-plugin.version>3.2.0</asciidoctor-maven-plugin.version>

    <!-- Dependencies plugin settings -->
    <module.name>org.mybatis.scripting.thymeleaf</module.name>
    <clirr.comparisonVersion>1.0.0</clirr.comparisonVersion>

    <!-- Reproducible Builds -->
    <project.build.outputTimestamp>1766359563</project.build.outputTimestamp>

    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.mybatis</groupId>
      <artifactId>mybatis</artifactId>
      <version>${mybatis.version}</version>
      <scope>provided</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.thymeleaf</groupId>
      <artifactId>thymeleaf</artifactId>
      <version>${thymeleaf.version}</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>6.1.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hsqldb</groupId>
      <artifactId>hsqldb</artifactId>
      <version>2.7.4</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <version>2.4.240</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.5.38</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-jdbc</artifactId>
      <version>7.0.8</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <configuration>
            <systemPropertyVariables>
              <mybatis.version>${mybatis.version}</mybatis.version>
            </systemPropertyVariables>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.asciidoctor</groupId>
        <artifactId>asciidoctor-maven-plugin</artifactId>
        <version>${asciidoctor-maven-plugin.version}</version>
        <configuration>
          <backend>html</backend>
          <outputDirectory>${project.build.directory}/site</outputDirectory>
          <attributes>
            <revnumber>${project.version}</revnumber>
            <mybatis-version>${mybatis.version}</mybatis-version>
          </attributes>
        </configuration>
        <executions>
          <execution>
            <id>generate-html</id>
            <goals>
              <goal>process-asciidoc</goal>
            </goals>
            <phase>generate-resources</phase>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>eclipse</id>
      <activation>
        <property>
          <name>m2e.version</name>
        </property>
      </activation>
      <build>
        <pluginManagement>
          <plugins>
            <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
            <plugin>
              <groupId>org.eclipse.m2e</groupId>
              <artifactId>lifecycle-mapping</artifactId>
              <version>1.0.0</version>
              <configuration>
                <lifecycleMappingMetadata>
                  <pluginExecutions>
                    <pluginExecution>
                      <pluginExecutionFilter>
                        <groupId>org.asciidoctor</groupId>
                        <artifactId>asciidoctor-maven-plugin</artifactId>
                        <versionRange>[${asciidoctor-maven-plugin.version},)</versionRange>
                        <goals>
                          <goal>process-asciidoc</goal>
                        </goals>
                      </pluginExecutionFilter>
                      <action>
                        <ignore />
                      </action>
                    </pluginExecution>
                  </pluginExecutions>
                </lifecycleMappingMetadata>
              </configuration>
            </plugin>
          </plugins>
        </pluginManagement>
      </build>
    </profile>
  </profiles>

</project>
